--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "daisyui": "^2.19.0",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
     "react": "18.2.0",
