--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "bcrypt": "^5.0.1",
     "daisyui": "^2.19.0",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
@@ -27,6 +28,7 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
